[workspace]
members = [
    "procfs",
    "procfs-core",
]

[workspace.package]
version = "0.17.0"
authors = ["Andrew Chin <achin@eminence32.net>"]
repository = "https://github.com/eminence/procfs"
keywords = ["procfs", "proc", "linux", "process"]
categories = ["os::unix-apis", "filesystem"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.70"

[patch.crates-io]
rustix = { path = "../rustix" }
libc = { git = "https://github.com/cristibctr/libc-0.2.169", branch = "wasix-0.2.169" }